

                 SCons - a software construction tool

                            Change Log

RELEASE  VERSION/DATE TO BE FILLED IN LATER

  From Dirk Baechle:
    - Removed a lot of compatibility methods and workarounds
      for Python versions < 2.7, in order to prepare the work
      towards a combined 2.7/3.x version. (PR #284)
      Also fixed the default arguments for the print_tree and
      render_tree methods. (PR #284, too)

  From William Blevins:
    - Added support for cross-language dependency scanning;
      SCons now respects scanner keys for implicit dependencies.
    - Resolved missing cross-language dependencies for
      SWIG bindings (fixes #2264).

  From William Deegan:
    - Add better messaging when two environments have
      different actions for the same target (Bug #2024)
    - Fix issue only with MSVC and Always build where targets
      marked AlwaysBuild wouldn't make it into CHANGED_SOURCES
      and thus yield an empty compile command line. (Bug #2622)


  From Jakub Pola:
    - Intel Compiler 2016 (Linux/Mac) update for tool directories.


RELEASE 2.4.1 - Mon, 07 Nov 2015 10:37:21 -0700

  From Arfrever Frehtes Taifersar Arahesis:
    - Fix for Bug # 2791 - Setup.py fails unnecessarily under Jython.

  From Dirk Baechle:
    - Fixed license of SVG titlepage files in the context of Debian
      packaging, such that they allow for commercial use too (#2985).

  From William Blevins:
    - InstallVersionedLib now available in the DefaultEnvironment context.
    - Improves orthogonality of use cases between different Install functions.

  From Carnë Draug:
    - Added new configure check, CheckProg, to check for
      existence of a program.

  From Andrew Featherstone:
    - Fix for issue #2840 - Fix for two environments specifying same target with different
      actions not throwing hard error. Instead SCons was incorrectly issuing a warning
      and continuing.

  From Hiroaki Itoh :